# cpp23-project-template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  test.cpp
cmake/: clang_format.cmake
module/: CMakeLists.txt
module/foo/: foo.cppm
test/: CMakeLists.txt  test.cpp
